# 2D-round-robot-sim

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.txt
assets/: Documentation.odt
doc/: Documentation.odt  UC.plantuml  class diagram.plantuml
examples/: ui.cpp
src/: main.cpp
src/actors/: ai.cpp  ai.hpp  bot.cpp  bot.hpp  object.cpp  object.hpp  obstacle.cpp  obstacle.hpp  player.cpp  player.hpp  vehicle.cpp  vehicle.hpp
src/renderable/: renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp
src/shapes/: Segment.cpp  Segment.hpp  TCircle.cpp  TCircle.hpp  TLine.cpp  TLine.hpp  TPoint.cpp  TPoint.hpp  TPoint.tpp  TPolygon.cpp  TPolygon.hpp  TVector.cpp  TVector.hpp  TVector.tpp
src/shapes/point/: TPoint.hpp  TPoint.tpp  point.cpp  point.hpp
src/user_interface/: bot.xcf  fragment_shader.glsl  gl_viewport.cpp  gl_viewport.hpp  interface.cpp  interface.hpp  serializer.cpp  serializer.hpp  user_interface.ui  vehicle.xcf  vertex_shader.glsl
src/user_interface/shaders/: fragment_shader.glsl  vertex_shader.glsl
test/: another_test.json  test.json  test2.json  test3.json  test4.json  trippy.json
test/general/: final_ui.cpp  jsontest.cpp  test.json  ui.cpp
test/shapes/: line_circle.cpp  line_line.cpp  segment.cpp  segment_line.cpp  segment_point.cpp  segment_segment.cpp
